fix: z-index button & header

--- a/src/app/modules/home-page/components/home-page/home-page.component.scss
+++ b/src/app/modules/home-page/components/home-page/home-page.component.scss
@@ -35,7 +35,7 @@
 
     &__button {
         border: 1px solid black;
-        z-index: -1;
+        z-index: 0;
     }
     
     @media screen and (min-width: 768px) {
